--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.0",
     "@opennextjs/cloudflare": "^1.0.0-beta.4",
+    "@prisma/client": "^6.7.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
