--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "@neondatabase/serverless": "^1.0.0",
     "@opennextjs/cloudflare": "^1.0.0-beta.4",
     "@prisma/client": "^6.7.0",
+    "autoprefixer": "^10.4.21",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
-    "next": "15.3.0",
+    "next": "^15.3.0",
+    "nodemailer": "^7.0.3",
     "nuqs": "^2.4.2",
     "pg": "^8.15.6",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-router": "^7.5.0",
     "react-spinners": "^0.16.1",
+    "ts-node": "^10.9.2",
     "wrangler": "^4.14.1",
     "zustand": "^5.0.3"
   },
@@ -32,14 +37,16 @@
     "@cloudflare/next-on-pages": "^1.13.12",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^20.17.46",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "drizzle-kit": "^0.31.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4.1.3",
+    "tailwindcss": "^4.1.6",
     "tsx": "^4.19.4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
